--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -132,7 +132,7 @@
                       <div class="overlay">
                         <a
                           class="btn btn-danger live-btn"
-                          href="https://www.wrappixel.com/demos/free-admin-templates/nice-admin-lite/nice-html/ltr/index.html"
+                          href="https://demos.wrappixel.com/free-admin-templates/bootstrap/nice-bootstrap-free/nice-html/ltr/index.html"
                           target="_blank"
                           >Live Preview</a
                         >
@@ -223,7 +223,7 @@
                             <img
                               src="https://www.wrappixel.com/demos/free-admin-templates/all-lite-landing-pages/assets/images/font-icons/light-circle.jpg"
                               class="img-fluid mr-2"
-                            />Google Map
+                            />Form page included
                           </li>
                           <li class="text-dark">
                             <img
@@ -270,7 +270,7 @@
                       <div class="overlay">
                         <a
                           class="btn btn-danger live-btn"
-                          href="https://www.wrappixel.com/demos/admin-templates/nice-admin/landingpage/"
+                          href="https://demos.wrappixel.com/premium-admin-templates/bootstrap/nice-bootstrap/landingpage/index.html"
                           target="_blank"
                           >Live Preview</a
                         >
